# LIME

./: .gitignore  README.md
editor/: CMakeLists.txt
editor/Resources/html/: index.html
editor/Resources/html/js/: main.js  objectManager.js  paletteManager.js  polyk.js
editor/Resources/shader/: fragment.frag  invertRG.frag
editor/Resources/textures/: NewProject.autosave.scml
editor/macos/editor/: editor-Info.plist
editor/macos/editor.xcodeproj/: project.pbxproj
editor/src/: globals.cpp  globals.hpp  main.cpp
editor/src/Application/: Application.cpp  application.hpp
editor/src/Core/: CoreEngine.cpp  CoreEngine.hpp  CustomHandler.cpp  CustomHandler.hpp  EngineComponent.cpp  EngineComponent.hpp  EngineManager.cpp  EngineManager.hpp  GameObject.cpp  GameObject.hpp  GameObjectComponent.cpp  GameObjectComponent.hpp
editor/src/Misc/: SaveMethods.hpp  Util.cpp  Util.hpp  VectorExtension.hpp
editor/src/Renderer/: Collider.cpp  Collider.hpp  Controller.cpp  Controller.hpp  GameObjectManager.cpp  GameObjectManager.hpp  GameRenderer.cpp  GameRenderer.hpp  MiniMapManager.cpp  MiniMapManager.hpp  PaletteManager.cpp  PaletteManager.hpp  Player.cpp  Player.hpp  Renderer.cpp  Renderer.hpp  TileMap.cpp  TileMap.hpp
editor/src/UI/: CustomListener.cpp  CustomListener.hpp  CustomSource.cpp  CustomSource.hpp  CustomSurface.cpp  CustomSurface.hpp  CustomSurfaceFactory.cpp  CustomSurfaceFactory.hpp
editor/windows/: desertEditor.aps  desertEditor.sln  desertEditor.vcxproj  desertEditor.vcxproj.filters  resource.h
editor/windows/Editor/: Editor.vcxproj
(+22 files in other folders)
